@@ -1,3 +1,9 @@
+2026-02-16  Bart Schaefer  <schaefer@zsh.org>
+
+	* Philippe: 54063: Src/Modules/param_private.c, Src/builtin.c,
+	Src/params.c, Src/zsh.h, Test/K01nameref.ztst: Simplifications
+	for resolve_nameref() and setscope()
+
 2026-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
 
 	* unposted: Doc/Zsh/compsys.yo: fix a format error introduced
